Changes to Header

--- a/tablet-and-desktop.scss
+++ b/tablet-and-desktop.scss
@@ -403,8 +403,9 @@ ul.membership-list {
   .features-headline {
     font-size: 20px;
     padding: 15px;
-    /* DJM Added Color */
+    /* DJM Added Color and Background */
     color: $bch-grey3;
+    background: transparent;
   }
 }
 
