--- a/theme.scss
+++ b/theme.scss
@@ -1657,15 +1657,16 @@ h4.expander-head {
   .features-headline {
   padding: 10px;
   position: absolute;
-  bottom: 38px;
+  bottom: 0px;
   left: 0;
   color: #fff;
-  width: 55.62%;
+  width: 100%;
   text-transform: uppercase;
   font-family: "Oswald",sans-serif;
   font-weight: bold;
   text-shadow: 1px 1px 2px rgba(0,0,0,.4);
-  background: #000;
+  background: transparent;
+
   
 /*  DJM Replaced this code with the code above...
     position: absolute;
