--- a/theme.scss
+++ b/theme.scss
@@ -1,21 +1,9 @@
 /* ============================================================================
-
-BHA Sandbox
-Theme.scss
-
-
-
    This is a mobile first stylesheet and it applies to all screen widths.
    For changes to the desktop or tablet viewports, see tablet-and-desktop.scss.
-
-DJM - Modified features.headline
-DJM - Pasted Colors from Publisher theme
-
-
    ============================================================================ */
 
-
-/* style variables */
+//* style variables *//
 
 // headline font
 $headline-font: "Bree Serif", serif;
@@ -25,7 +13,10 @@ $headline-font-alt: "Bree Serif", sans-serif;
 // main font
 $font: "Lato", sans-serif;
 
-
+//$theme-color-1: #b85812;
+//$theme-color-2: #e0d6c8;
+//$theme-color-3: #cc6633;
+//$theme-color-4: #516e16;
 
 // form input area focus color
 $theme-color-5: rgba(123, 163, 41, 0.6);
@@ -34,7 +25,10 @@ $theme-color-5: rgba(123, 163, 41, 0.6);
 $red: #b94a48;
 $green: #619114;
 
+$header-color: #628221;
+
 $brown: #766341;
+$blue: #3A6F8F;
 $burgundy: #601B28;
 $orange: #c63;
 $turquoise: #3A6F8F;
@@ -52,19 +46,20 @@ $white: #fff;
 $facebook: #3b5998;
 $twitter: #00aced;
 
-$header-color: #fff;
+$header-color: $green;
 $header-text-color: #000;
 
-$site-bg: #6E9BC5;
-$site-color: $white;
-$desktop-site-bg: #6E9BC5;
-$desktop-site-color: $white;
+$site-bg: $white;
+$site-color: $charcoal;
+$desktop-site-bg: $white;
+$desktop-site-color: $charcoal;
 
 // custom colors
-$theme-color-1: $bhagreen;
-$theme-color-2: $black;
-$theme-color-3: $tan;
-$theme-color-4: $site-bg;
+$theme-color-1: $red;
+$theme-color-2: $blue;
+$theme-color-3: $green;
+$theme-color-4: $turquoise;
+$theme-color-4: $white;
 
 
 
@@ -408,24 +403,23 @@ body {
 
 header {
   float: left;
-  padding: 28px 0 25px 15px;
+  padding: 28px 0 0 0;
   max-width: 78%;
 }
 
 // if the site has a logo, center it it above content in mobile view
 
 .site-logo {
+  margin-top: 25px;
   header {
     float: none;
     text-align: center;
     padding: 0;
     max-width: 100%;
-//    margin-left: -65px; // sets logo to true center
+    margin-left: -65px; // sets logo to true center
     img {
-     max-width: 225px;
+      max-width: 155px;
       max-height: 100px;
-      position: relative;
-      left: -50%;
     }
   }
 }
@@ -703,7 +697,7 @@ ul#page-stream {
   li.activity  {
     span + a {
     display: block;
-    }
+    } 
   }
   .activity-time {
     display: block;
@@ -868,7 +862,7 @@ ul#page-stream {
 
 .header-container {
   padding-bottom: 40px;
-  min-height: 80px;
+  min-height: 140px;
 }
 
 // site wide footer
@@ -935,12 +929,12 @@ footer {
 }
 
 .supporter-nav-button {
-  margin: 10px 0;
+  margin: 5px 0;
   text-align: center;
   font-size: 18px;
   width: 100%;
   line-height: 30px;
-  padding: 20px;
+  @include border-radius(1px);
   background-color: $supporter-nav-button-one;
   color: $supporter-nav-color-one;
   border-bottom: $supporter-nav-button-border;
@@ -969,7 +963,6 @@ footer {
     }
   }
 }
-
 
 // rules link shown near comment box
 
@@ -1267,7 +1260,7 @@ ul.membership-list {
     padding: 15px;
     display: inline-block;
     margin: 0 10px 15px 0;
-    width: 100%; // 236px ÷ 984px
+    width: 100%; // 236px Ã· 984px
     .membership-bottom {
       background-color: #444;
       color: #ccc;
@@ -1721,10 +1714,12 @@ h4.expander-head {
   border: $feature-border;
   .single-feature, .multiple-features {
     display: block;
-    width: 100%;
+//DJM - Added start -  
+   width: 100%;
     height: 360px;
     @include background-size(cover !important);
-  }
+//DJM Added End  
+}
   img {
     width: 100%;
   }
@@ -1748,6 +1743,10 @@ h4.expander-head {
     visibility: hidden;
     a {
       display: block;
+      text-align: center;
+    }
+    img {
+      height: auto;
     }
     li {
       margin: 0;
@@ -1760,7 +1759,7 @@ h4.expander-head {
     position: absolute;
     left: 0;
     right: 0;
-    bottom: 20px;
+    bottom: 0;
     z-index: 2;
     font-size: 36px;
     line-height: 40px;
@@ -1778,6 +1777,15 @@ h4.expander-head {
       font-size: 24px;
       text-transform: none;
     }
+
+    /* Fallback for web browsers that doesn't support RGBa */
+    background: rgb(0, 0, 0) transparent;
+    /* RGBa with 0.6 opacity */
+    background: rgba(0, 0, 0, 0.6);
+    /* For IE 5.5 - 7*/
+    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000, endColorstr=#99000000);
+    /* For IE 8*/
+    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000, endColorstr=#99000000)";
   }
   // If you want labels to display beneath your images, remove display: none; below //
   .flex-control-paging {
@@ -1836,7 +1844,8 @@ h4.expander-head {
   font-size: 36px;
   padding: 5px;
   @if lightness($flex-color) == lightness($site-bg) and $flex-background == transparent {
-    color: $site-color;
+  background: $theme-color-1;
+  border: 1px solid darken($theme-color-1, 10);
   } @else {
     color: $flex-color;
   }
@@ -1844,10 +1853,16 @@ h4.expander-head {
 
 .flex-prev {
   left: 0;
+  @include border-radius-top-right(2px);
+  @include border-radius-bottom-right(2px);
+  border-left: 0;
 }
 
 .flex-next {
   right: 0;
+  @include border-radius-top-left(2px);
+  @include border-radius-bottom-left(2px);
+  border-right: 0;
 }
 
 // pagination
@@ -1963,11 +1978,6 @@ ul.homepage_excerpt-list {
 /////////////
 // CUSTOM CSS
 ////////////
-
-//DJM Center the topnav menu
-ul#topnav { float: none; text-align: center;}
-
-ul#topnav li { float: none; display: inline-block; }
 
 
 // general
